--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -24,6 +24,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <meta-data
             android:name="com.wnc.srtlearn.APP_ID"
             android:value="8483663" />
@@ -33,11 +34,22 @@
         <meta-data
             android:name="com.wnc.srtlearn.SECRET_KEY"
             android:value="3b517268f52cb6ae123f3eb4ee305d38" />
-
+		  <activity
+                android:name="com.baidu.voicerecognition.android.ui.BaiduASRDigitalDialog"
+                android:configChanges="orientation|keyboardHidden|screenLayout"
+                android:theme="@android:style/Theme.Dialog"
+                android:exported="false"
+                android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="com.baidu.action.RECOGNIZE_SPEECH" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        
         <service
             android:name="com.baidu.speech.VoiceRecognitionService"
             android:exported="false" />
-
+		
         <activity
             android:name="com.wnc.srtlearn.ApiActivity"
             android:label="@string/app_name" >
