--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -36,7 +36,7 @@
         android:theme="@style/AppTheme" >
         
         <activity
-            android:name="com.wnc.srtlearn.RecActivity"
+            android:name="com.wnc.srtlearn.TTSActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,7 +44,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-         <activity android:name="com.wnc.srtlearn.TTSActivity"/>
+         <activity android:name="com.wnc.srtlearn.ReadActivity"/>
     </application>
 
 </manifest>
