--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ ehthumbs.db
 
 # Folder config file
 Desktop.ini
-
+bin/
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
@@ -13,6 +13,7 @@ $RECYCLE.BIN/
 *.msi
 *.msm
 *.msp
+*.class
 
 # Windows shortcuts
 *.lnk
