修改几个Gallery的图片,改后更清新简洁。新加了跟读模块

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -54,6 +54,7 @@
          <activity android:name="com.wnc.srtlearn.ui.SrtActivity"/>
          <activity android:name="com.wnc.srtlearn.ui.FavoriteSrtActivity"/>
          <activity android:name="com.wnc.srtlearn.ui.ReadActivity"/>
+         <activity android:name="com.wnc.srtlearn.ui.RecWordActivity"/>
     </application>
 
 </manifest>
