--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,9 @@
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
     <!-- 蓝牙录音检测耳机状态 -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
+    
+        <!-- 获取当前运行任务 -->
+    <uses-permission android:name="android.permission.GET_TASKS" />
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -40,20 +43,20 @@
             android:name="com.wnc.srtlearn.ui.MainActivity"
             android:label="@string/app_name" 
             android:launchMode="singleTask"
-            android:configChanges="orientation|keyboardHidden|screenSize">
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-         <activity android:name="com.wnc.srtlearn.ui.BihuaActivity" android:screenOrientation="landscape"/>
-         <activity android:name="com.wnc.srtlearn.ui.PinyinActivity" android:screenOrientation="landscape"/>
-         <activity android:name="com.wnc.srtlearn.ui.RecWordActivity" android:screenOrientation="landscape"/>
-         <activity android:name="com.wnc.srtlearn.ui.TTSActivity" android:screenOrientation="landscape"/>
-         <activity android:name="com.wnc.srtlearn.ui.SrtActivity" android:screenOrientation="landscape"/>
-         <activity android:name="com.wnc.srtlearn.ui.FanyiActivity" android:screenOrientation="landscape"/>
-         <activity android:name="com.wnc.srtlearn.ui.FavoriteSrtActivity" android:screenOrientation="landscape"/>
+         <activity android:name="com.wnc.srtlearn.ui.BihuaActivity" />
+         <activity android:name="com.wnc.srtlearn.ui.PinyinActivity" />
+         <activity android:name="com.wnc.srtlearn.ui.RecWordActivity" />
+         <activity android:name="com.wnc.srtlearn.ui.TTSActivity" />
+         <activity android:name="com.wnc.srtlearn.ui.SrtActivity"  android:configChanges="orientation|keyboardHidden|screenSize"/>
+         <activity android:name="com.wnc.srtlearn.ui.FanyiActivity" />
+         <activity android:name="com.wnc.srtlearn.ui.FavoriteSrtActivity" />
          <activity android:name="com.wnc.srtlearn.ui.ReadActivity"/>
          
          <activity android:name="net.widget.act.sample.ActTestActivity"/>
