添加字幕数据库文件到工作目录,实现dao以及一个搜索的方法

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -62,7 +62,7 @@
          <activity android:name="net.widget.act.sample.ActTestActivity"/>
          
          <!-- 线控的广播 -->
-         <receiver android:name="com.wnc.srtlearn.srt.MediaButtonReceiver" >
+         <receiver android:name="com.wnc.srtlearn.modules.srt.MediaButtonReceiver" >
             <intent-filter android:priority="1000">
                 <action android:name="android.intent.action.MEDIA_BUTTON" >
                 </action>
