--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -58,6 +58,7 @@
          <activity android:name="com.wnc.srtlearn.ui.FanyiActivity" />
          <activity android:name="com.wnc.srtlearn.ui.FavoriteSrtActivity" />
          <activity android:name="com.wnc.srtlearn.ui.ReadActivity"/>
+         <activity android:name="com.wnc.srtlearn.ui.SrtSearchActivity"/>
          
          <activity android:name="net.widget.act.sample.ActTestActivity"/>
          
