--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity
             android:name="com.wnc.srtlearn.ui.MainActivity"
             android:label="@string/app_name" 
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:launchMode="singleTask"
             >
             <intent-filter>
@@ -50,15 +51,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-         <activity android:name="com.wnc.srtlearn.ui.BihuaActivity" />
-         <activity android:name="com.wnc.srtlearn.ui.PinyinActivity" />
-         <activity android:name="com.wnc.srtlearn.ui.RecWordActivity" />
+         <activity android:name="com.wnc.srtlearn.ui.BihuaActivity" android:configChanges="orientation|keyboardHidden|screenSize"/>
+         <activity android:name="com.wnc.srtlearn.ui.PinyinActivity" android:configChanges="orientation|keyboardHidden|screenSize"/>
+         <activity android:name="com.wnc.srtlearn.ui.RecWordActivity" android:configChanges="orientation|keyboardHidden|screenSize"/>
          <activity android:name="com.wnc.srtlearn.ui.TTSActivity" />
          <activity android:name="com.wnc.srtlearn.ui.SrtActivity"  android:configChanges="orientation|keyboardHidden|screenSize"/>
-         <activity android:name="com.wnc.srtlearn.ui.FanyiActivity" />
-         <activity android:name="com.wnc.srtlearn.ui.FavoriteSrtActivity" />
+         <activity android:name="com.wnc.srtlearn.ui.FanyiActivity" android:configChanges="orientation|keyboardHidden|screenSize"/>
+         <activity android:name="com.wnc.srtlearn.ui.FavoriteSrtActivity" android:configChanges="orientation|keyboardHidden|screenSize"/>
          <activity android:name="com.wnc.srtlearn.ui.ReadActivity"/>
-         <activity android:name="com.wnc.srtlearn.ui.SrtSearchActivity"/>
+         <activity android:name="com.wnc.srtlearn.ui.SrtSearchActivity" />
          
          <activity android:name="net.widget.act.sample.ActTestActivity"/>
          
