完善字幕收藏模块的数据库设计和程序设计,改善搜索模块,避免重复搜索

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -59,12 +59,12 @@
          <activity android:name="com.wnc.srtlearn.ui.FanyiActivity" android:configChanges="orientation|keyboardHidden|screenSize"/>
          <activity android:name="com.wnc.srtlearn.ui.FavoriteSrtActivity" android:configChanges="orientation|keyboardHidden|screenSize"/>
          <activity android:name="com.wnc.srtlearn.ui.ReadActivity"/>
-         <activity android:name="com.wnc.srtlearn.ui.SrtSearchActivity" />
+         <activity android:name="com.wnc.srtlearn.ui.SrtSearchActivity" android:configChanges="orientation|keyboardHidden|screenSize"/>
          
          <activity android:name="net.widget.act.sample.ActTestActivity"/>
          
          <!-- 线控的广播 -->
-         <receiver android:name="com.wnc.srtlearn.modules.srt.MediaButtonReceiver" >
+         <receiver android:name="net.headset.MediaButtonReceiver" >
             <intent-filter android:priority="1000">
                 <action android:name="android.intent.action.MEDIA_BUTTON" >
                 </action>
