动了一个大手术,将myjar重构成2.0版本.常见文本文件自动识别编码,字幕异常移入srt.ex包下

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,7 +40,7 @@
         android:theme="@style/MymoneyTheme" >
         
         <activity
-            android:name="com.wnc.srtlearn.ui.JuniorChsLearnActivity"
+            android:name="com.wnc.srtlearn.ui.SrtActivity"
             android:label="@string/app_name" 
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:launchMode="singleTask"
@@ -55,7 +55,7 @@
          <activity android:name="com.wnc.srtlearn.ui.PinyinActivity" android:configChanges="orientation|keyboardHidden|screenSize"/>
          <activity android:name="com.wnc.srtlearn.ui.RecWordActivity" android:configChanges="orientation|keyboardHidden|screenSize"/>
          <activity android:name="com.wnc.srtlearn.ui.TTSActivity" />
-         <activity android:name="com.wnc.srtlearn.ui.SrtActivity"  android:configChanges="orientation|keyboardHidden|screenSize"/>
+         <activity android:name="com.wnc.srtlearn.ui.JuniorChsLearnActivity"  android:configChanges="orientation|keyboardHidden|screenSize"/>
          <activity android:name="com.wnc.srtlearn.ui.FanyiActivity" android:configChanges="orientation|keyboardHidden|screenSize"/>
          <activity android:name="com.wnc.srtlearn.ui.FavoriteSrtActivity" android:configChanges="orientation|keyboardHidden|screenSize"/>
          <activity android:name="com.wnc.srtlearn.ui.ReadActivity"/>
