添加视频同步显示的功能,seekto功能正常

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -60,6 +60,7 @@
          <activity android:name="com.wnc.srtlearn.ui.FavoriteSrtActivity" android:configChanges="orientation|keyboardHidden|screenSize"/>
          <activity android:name="com.wnc.srtlearn.ui.ReadActivity"/>
          <activity android:name="com.wnc.srtlearn.ui.SrtSearchActivity" android:configChanges="orientation|keyboardHidden|screenSize"/>
+         <activity android:name="com.wnc.srtlearn.ui.VideoActivity" android:configChanges="orientation|keyboardHidden|screenSize"/>
          
          <activity android:name="net.widget.act.sample.ActTestActivity"/>
          
