--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,7 +28,9 @@
     
         <!-- 获取当前运行任务 -->
     <uses-permission android:name="android.permission.GET_TASKS" />
-
+    
+	<uses-permission android:name="android.permission.CHANGE_CONFIGURATION"/>
+    
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
